--- a/webroot/index.html
+++ b/webroot/index.html
@@ -4,6 +4,8 @@
 	<title>TEST Messenger</title>
 </head>
 <body>
+<button id="update" style="display: none;">update</button>
+<button id="connect" style="display: none;">connect</button>
 <div id="login" align="center">
 	<h2 id="login_message">Username:</h2>
 	<input id="username" type="text">
@@ -20,15 +22,16 @@
 	</div>
 	<div id="message">
 		<div id="in_msg">
-			<div id = "status">
-				Find someone to chat!
+			<div id="info">
+				Find someone to chat
 			</div>
-			<div id = "conv">
+			<div id="conv">
 
 			</div>
 		</div>
 		<div id="out_msg">
 			<textarea id="input_msg"></textarea>
+			<button id="leave">LEAVE</button>
 			<button id="logOut">LOGOUT</button>
 			<button id="send">SEND</button>
 		</div>
